--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="CanisStudio-2 "
     />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>CAST</title>
+    <title>Canis Studio Plus</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
